--- a/configs/hub-service/application.yml
+++ b/configs/hub-service/application.yml
@@ -2,8 +2,8 @@ server:
   port: 3003
 
 message:
-  test1: '(수정1)테스트 메세지1'
-  test2: '(수정1)테스트 메세지2'
+  test1: '(소정)테스트 메세지1'
+  test2: '(소정)테스트 메세지2'
 
 message3: '테스트 메세지3'
 
