hub-service 설정 추가

--- a/configs/application.yml
+++ b/configs/application.yml
@@ -1,5 +1,12 @@
+spring:
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
 
 management:
   endpoints:
     web:
-      exposure: refresh
+      exposure:
+        include: refresh
+
