--- a/configs/application.yml
+++ b/configs/application.yml
@@ -4,6 +4,13 @@ spring:
       ribbon:
         enabled: false
 
+feign:
+  client:
+    default:
+      connectTimeout: 5000
+      readTimeout: 5000
+      loggerLevel: full
+
 management:
   endpoints:
     web:
