--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -5,3 +5,18 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+
+      routes:
+        - id: hub-service
+          url: lb://hub-service
+          predicates:
+            - Path=/v1/hub/**
+          filters:
+            - 'RewritePath=/v1/hub/(?<path>.*), /\${path}'
+
+        - id: product-service
+          url: lb://product-service
+          predicates:
+            - Path=/v1/product/**
+          filters:
+            - 'RewritePath=/v1/product/(?<path>.*), /\${path}'
