gateway-server 설정 추가

--- a/configs/gateway-server/application.yml
+++ b/configs/gateway-server/application.yml
@@ -8,14 +8,14 @@ spring:
 
       routes:
         - id: hub-service
-          url: lb://hub-service
+          uri: lb://hub-service
           predicates:
             - Path=/v1/hub/**
           filters:
             - 'RewritePath=/v1/hub/(?<path>.*), /\${path}'
 
         - id: product-service
-          url: lb://product-service
+          uri: lb://product-service
           predicates:
             - Path=/v1/product/**
           filters:
