--- a/configs/common/application.yml
+++ b/configs/common/application.yml
@@ -1,4 +1,11 @@
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
+    virtual-host: /
+
   cloud:
     loadbalancer:
       ribbon:
@@ -41,12 +48,6 @@ spring:
         provider:
           keycloak:
             issuer-uri: https://keycloak.code-factory.co.kr/realms/codefactory
-
-  rabbitmq:
-    host: localhost                 # RabbitMQ 브로커의 호스트명 또는 IP. 로컬 테스트 시 'localhost' 사용.
-    port: 5672                      # AMQP 포트(기본 5672). 브로커가 다른 포트를 쓰면 해당 포트로 설정.
-    username: ${RABBITMQ_USERNAME}
-    password: ${RABBITMQ_PASSWORD}
 
 feign:
   client:
